--- a/watchlist/assets/css/style.css
+++ b/watchlist/assets/css/style.css
@@ -22,6 +22,7 @@
 
 body{
     font-family: 'Bebas Neue', sans-serif;
+    background-color: var(--primary-color);
 }
 
 a{
@@ -36,8 +37,8 @@ a{
 }
 
 header{
-    background-color: var(--primary-color);
-    height: 100px;
+    background-color: rgb(53, 53, 53);
+    height: 150px;
 }
 
 .navbar_container{
@@ -50,7 +51,7 @@ header{
     padding: 1rem 2rem;
     align-items: center;
     justify-content: space-between;
-    transform: translateY(35%);
+    transform: translateY(55%);
 }
 
 .navbar_logo img{
@@ -84,6 +85,7 @@ header{
     border-radius: 0 0 10px 10px;
     padding-bottom: 0.1rem;
     margin-left: 2rem;
+    color: var(--white);
 
 }
 
@@ -92,7 +94,6 @@ header{
     outline: none;
     font-size: 1rem;
     background: none;
-    color: var(--text-dark);
     width: 230px;
     border-bottom: 2px solid var(--primary-color);
     
@@ -103,4 +104,8 @@ header{
     background: none;
     font-size: 1.2rem;
     cursor: pointer;
+}
+
+button .search {
+
 }
